# Declutter

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.amankrx.Declutter.Devel.json  com.amankrx.declutter.Devel.json
data/: com.amankrx.Declutter.gschema.xml  com.amankrx.Declutter.gschema.xml.in  com.amankrx.Declutter.metainfo.xml.in.in  com.amankrx.Declutter.service.in  com.amankrx.declutter.desktop.in.in  com.amankrx.declutter.gschema.xml.in  com.amankrx.declutter.metainfo.xml.in.in  meson.build  resources.gresource.xml
data/resources/: meson.build  resources.gresource.xml
data/resources/tracker/ontology/: declutter.ontology
data/resources/ui/: add_habit_window.blp  window.blp  window.ui
data/tracker/: meson.build
data/tracker/ontology/: declutter.description  meson.build
data/ui/: window.blp
migrations/2023-05-12-151022_create_user_table/: up.sql
migrations/2023-05-14-165218_create_habit_table/: down.sql  up.sql
migrations/2023-05-14-165235_create_user_table/: up.sql
migrations/2023-05-14-165243_create_habit_entry_table/: down.sql  up.sql
po/: POTFILES.in
src/: application.rs  config.rs  config.rs.in  lib.rs  main.rs  meson.build  schema.rs  window.rs
src/core/: application.rs  database.rs  i18n.rs  mod.rs  serialize.rs  settings.rs  utils.rs
src/models/: compare.rs  duration_kind.rs  frequency.rs  habit.rs  habit_category.rs  habit_category_map.rs  habit_entry.rs  habit_model.rs  habit_name.rs  mod.rs  target_goal_unit.rs  unitsystem.rs  user.rs  weekday.rs
src/windows/: add_habit_window.rs  mod.rs  window.rs
