[package]
name = "declutter"
version = "0.1.0"
authors = ["Aman Kumar <akumar@gnome.org>"]
edition = "2021"

[lib]
name = "libdeclutter"
path = "src/lib.rs"

[dependencies]
adw = { version = "0.3.1", package = "libadwaita" }
anyhow = "1.0.71"
diesel = {version = "2.0", features = ["sqlite", "r2d2"]}
diesel_migrations = {version = "2.0", features = ["sqlite"]}
easy-ext = "1.0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4" }
log = "0.4"
once_cell = "1.14"
pretty_env_logger = "0.4"
regex = "1.8.1"
serde = "1.0.163"
serde_json = "1.0.96"
strum = {version = "0.24.1", features = ["derive"]}
tempdir = "0.3.7"
tracing = {version = "0.1", default-features = false}
