[package]
name = "declutter"
version = "0.1.0"
authors = ["Aman Kumar <akumar@gnome.org>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_2"] }
anyhow = "1.0.82"
diesel = { version = "2.1.6", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
easy-ext = "1.0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_8"] }
log = "0.4.21"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
serde = "1.0.200"
serde_json = "1.0.116"
strum = { version = "0.26.2", features = ["derive"] }
tempdir = "0.3.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
